--- a/xrender_tests/Makefile
+++ b/xrender_tests/Makefile
@@ -1,8 +1,8 @@
-PKGS = xcb xcb-render xcb-ewmh xcb-renderutil
+PKGS = xcb xcb-render xcb-ewmh xcb-renderutil xcb-icccm freetype2
 CFLAGS = -Wall -Werror -Wno-unused `pkg-config --cflags $(PKGS)` -g
 LDFLAGS = `pkg-config --libs $(PKGS)` -lm
 
-example: example
+ex: example
 
 %: %.c
 	$(CC) -std=c99 -o $@ $^ $(CFLAGS) $(LDFLAGS)
