New unicode wrapper function & start of joining of fc and ft2
- Switched from the custom char to utf16 to something that is already
provided by fontconfig

- Added the start of the fc to ft2 join

--- a/xrender_tests/Makefile
+++ b/xrender_tests/Makefile
@@ -1,4 +1,4 @@
-PKGS = xcb xcb-render xcb-ewmh xcb-renderutil xcb-icccm freetype2
+PKGS = xcb xcb-render xcb-ewmh xcb-renderutil xcb-icccm freetype2 fontconfig
 CFLAGS = -Wall -Werror -Wno-unused `pkg-config --cflags $(PKGS)` -g
 LDFLAGS = `pkg-config --libs $(PKGS)` -lm
 
