Solve compilation error on some platforms
On new platforms the --as-needed is enabled by default, I was passing
the libraries inside the LDFLAGS which was wrong, so it created issues
related to libraries not being included because they came after the C
file.

--- a/fc_w_ft/Makefile
+++ b/fc_w_ft/Makefile
@@ -2,7 +2,8 @@
 PKGS = freetype2 fontconfig
 CPPFLAGS=
 CFLAGS= -Wall -pedantic -g `pkg-config --cflags $(PKGS)` -fstack-protector-all
-LDFLAGS= `pkg-config --libs $(PKGS)`
+#LDFLAGS=-Wl,--no-as-needed
+LDLIBS= `pkg-config --libs $(PKGS)`
 
 all: main
 
