Moved the functions to xcbft.h and clean the Makefile
The core of the project is there, still needs to be cleaned and add more
things suchs as:
- Memory leaks check
- Fallback support for search similar to initial one
- Kerning
- Check if bold is working properly
- Check return codes of functions and documentation
And more

--- a/fc_w_ft/Makefile
+++ b/fc_w_ft/Makefile
@@ -1,9 +1,10 @@
 
-PKGS = freetype2 fontconfig
+PKGS = xcb xcb-render xcb-renderutil xcb-icccm freetype2 fontconfig
 CPPFLAGS=
 CFLAGS= -Wall -pedantic -g `pkg-config --cflags $(PKGS)` -fstack-protector-all
 #LDFLAGS=-Wl,--no-as-needed
 LDLIBS= `pkg-config --libs $(PKGS)`
+
 
 all: main
 
