--- a/ft_xr/Makefile
+++ b/ft_xr/Makefile
@@ -1,4 +1,4 @@
-PKGS = xcb xcb-render xcb-ewmh xcb-renderutil xcb-icccm freetype2 fontconfig
+PKGS = xcb xcb-render xcb-ewmh xcb-renderutil xcb-xrm xcb-icccm freetype2 fontconfig
 CFLAGS = -Wall -Werror -pedantic `pkg-config --cflags $(PKGS)` -g -fstack-protector-all
 #LDFLAGS=-Wl,--no-as-needed
 LDLIBS = `pkg-config --libs $(PKGS)`
