Added a wrapper function to return a pixmap with drawn text on it
This function should be helpful for quick text drawing.

--- a/ft_xr/Makefile
+++ b/ft_xr/Makefile
@@ -1,7 +1,7 @@
 PKGS = xcb xcb-render xcb-ewmh xcb-renderutil xcb-xrm xcb-icccm freetype2 fontconfig
 CFLAGS = -Wall -Werror -pedantic `pkg-config --cflags $(PKGS)` -g -fstack-protector-all
 #LDFLAGS=-Wl,--no-as-needed
-LDLIBS = `pkg-config --libs $(PKGS)`
+LDLIBS = `pkg-config --libs $(PKGS)` -lm
 
 ex: example
 
